Fixed refresh button, ombi icons, and adjust spacing

--- a/sass/partials/containers.scss
+++ b/sass/partials/containers.scss
@@ -152,10 +152,6 @@ body {
 
 // Content Containers
 
-.bg-info {
-	background: transparent !important;
-}
-
 .bg-theme {
 	background: $black30a!important;
 }
@@ -280,6 +276,7 @@ body {
 
 .recent-poster {
 	margin-bottom: 50px;
+	margin-top: 2px;
 }
 
 .recent-title {
